--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,28 @@ body {
   top: 20vh;
 }
 
+.picture-component {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  overflow: hidden;
+}
+
+.picture-component img {
+  width: 70%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 15%;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  z-index: 100;
+}
+
+.picture-component img.active {
+  opacity: 1;
+}
+
 .one {
   font-size: 4.5rem;
 }
